hphp/test/slow/php7_backported/scalar-types/scalar_weak_reference.php.expectf
float(1)

Catchable fatal error: Argument 1 passed to to_int() must be an instance of int, float given in %s/test/slow/php7_backported/scalar-types/scalar_weak_reference.php on line 12